# cerebri_rdd2

./: .gitignore  CMakeLists.txt  README.md  flake.nix  prj.conf  west.yml
.github/workflows/: fastdyn.yml
boards/: mr_vmu_tropic.conf  native_sim.conf  native_sim.overlay  native_sim_native_64.conf
cmake/: InstallRumoca.cmake
docs/: fastdyn.md
drivers/input/: CMakeLists.txt  lockstep_rc.c
drivers/nxp_flexio_dshot/: CMakeLists.txt  lockstep_dshot.c
drivers/sensor/: CMakeLists.txt  lockstep_imu.c  sitl_imu.c
dts/bindings/: cognipilot,lockstep-dshot.yaml  cognipilot,lockstep-imu.yaml  cognipilot,lockstep-rc.yaml
fastdyn/: comms.conf  mr_vmu_tropic.overlay  mr_vmu_tropic.toml  prj.conf  run_mission.sh
modelica/: Quadrotor.mo
nix/: nixos-module.nix
schemas/: synapse_sil.fbs
scripts/: west-commands.yml
scripts/west_commands/: format.py
spec/: README.md  SPEC_0001_REPO_ARCHITECTURE.md  SPEC_0004_TROPIC_HARDWARE_SCOPE.md  SPEC_0006_CODE_SIZE_AND_DEBUG_SHELL.md  SPEC_0007_FLATBUFFER_TOPICS.md  SPEC_0008_SELF_DESCRIBING_LOG_RECORDS.md  SPEC_0009_NATIVE_SIM_LOCKSTEP.md  SPEC_0009_NATIVE_SIM_SITL.md  SPEC_0010_ZENOH_ETHERNET_STAGING.md
src/: CMakeLists.txt  attitude_control.c  attitude_control.h  attitude_estimator.c  attitude_estimator.h  control_io.c  control_io.h  efmi_wrapper.h  fastdyn_board.c  flight_mode.c  flight_mode.h  imu_stream.c  imu_stream.h  main.c  mocap_shell.c  motor_output.c  motor_output.h  native_sil_host.c  native_sil_transport.h  rate_control.c  rate_control.h  rc_input.c  rc_input.h  rdd2_control_types.h  rdd2_efmi_control.h  synapse_messages.c  synapse_messages.h  topic_bus.c  topic_bus.h  topic_flatbuffer.c  topic_flatbuffer.h  topic_shell.c
subsys/: CMakeLists.txt  Kconfig
subsys/lockstep/: CMakeLists.txt  Kconfig  README.md  lockstep_direct.c  lockstep_fastdyn.c  lockstep_host.c  lockstep_input.c  lockstep_input.h  lockstep_shared.h  lockstep_transport.c  lockstep_transport.h
subsys/log_sdcard/: CMakeLists.txt  Kconfig  log_sdcard.c
subsys/sitl/: CMakeLists.txt  Kconfig  sitl_flatbuffer.c  sitl_flatbuffer.h  sitl_transport.c  sitl_transport.h  sitl_udp_coordinator.c  sitl_zenoh_coordinator.c
tests/zephyr/: native_sil.conf
tools/fastdyn_mission/: Cargo.toml
tools/fastdyn_mission/src/: main.rs  physics.rs  protocol.rs  shared_memory.rs
