[package]
name = "cerebri-rdd2-mission"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
flatbuffers = "=25.12.19"
libloading = "0.8"
memmap2 = "0.9"
object = "0.37"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
synapse_fbs = "=0.7.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
